@@ -1,3 +1,12 @@
+2023-09-16  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp.el (tramp-otp-password-prompt-regexp): New defcustom.
+	(tramp-action-otp-password): New defun.
+
+	* tramp-sh.el (tramp-actions-before-shell)
+	(tramp-actions-copy-out-of-band):
+	Use `tramp-otp-password-prompt-regexp'.
+
 2023-09-13  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp-sh.el (tramp-ls-file-attributes): New defconst.
